--- a/boardwithhan/src/main/resources/templates/boardview.html
+++ b/boardwithhan/src/main/resources/templates/boardview.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>게시글 상세 페이지</title>
 </head>
 <body>
 
-<h1> 제목입니다. </h1>
-<p> 내용 </p>
+<h1 th:text="${board.getTitle()}"> 제목입니다.</h1>
+<p th:text="${board.getContent()}"> 내용 </p>
+<br>
+
+<a th:href="@{${board.filepath}}">업로드된 파일</a>
+
+<br><br><br>
+<a th:href="@{/board/modify/{id}(id = ${board.id})}">글 수정</a>
+
+<a th:href="@{/board/delete(id = ${board.id})}">글 삭제</a>
+
 
 </body>
 </html>
