--- a/boardwithhan/src/main/resources/templates/boardwrite.html
+++ b/boardwithhan/src/main/resources/templates/boardwrite.html
@@ -28,14 +28,28 @@
 <body>
 
     <div class="layout">
-        <form action="/board/writepro" method="post">
+        <form action="/board/writepro" method="post" enctype="multipart/form-data" onsubmit="return validateForm()">
 
             <input name="title" type="text">
             <textarea name="content"></textarea>
+<!--            <input id="fileInput" type="file" name="file">-->
+            <input type="file" name="file">
             <button type="submit">작성</button>
 
         </form>
     </div>
 
 </body>
+
+<!--<script>-->
+<!--    function validateForm() {-->
+<!--        var fileInput = document.getElementById('fileInput');-->
+<!--        if (fileInput.files.length === 0) {-->
+<!--            alert('파일을 선택해주세요.');-->
+<!--            return false; // 파일이 선택되지 않은 경우 폼 제출을 막음-->
+<!--        }-->
+<!--        return true; // 파일이 선택된 경우 폼 제출을 허용-->
+<!--    }-->
+<!--</script>-->
+
 </html>
